--- a/workday/package.json
+++ b/workday/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
+    "mongoose": "^8.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
