--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.0",
+    "@reduxjs/toolkit": "^2.2.6",
     "@types/mongoose": "^5.11.97",
+    "axios": "^1.7.2",
     "mongoose": "^8.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
