--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,12 @@
     "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.0",
     "@types/mongoose": "^5.11.97",
+    "formik": "^2.4.6",
     "mongoose": "^8.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
