--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,11 +19,7 @@
     "@reduxjs/toolkit": "^2.2.6",
     "@types/mongoose": "^5.11.97",
     "formik": "^2.4.6",
-    "mongoose": "^8.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.1",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
     "axios": "^1.7.2",
     "mongoose": "^8.5.0",
     "react": "^18.3.1",
