--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/node": "^20.14.11",
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.4"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.21",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2"
   }
 }
