--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.2.6",
     "@types/mongoose": "^5.11.97",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.6",
     "mongoose": "^8.5.0",
     "react": "^18.3.1",
